<androidx.preference.PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
            android:title="@string/ui_setting_category_options"
            app:iconSpaceReserved="false">
        <EditTextPreference
                android:key="TextBeforeInviteMessage"
                android:title="@string/ui_setting_title_text_before_invite_message"
                app:iconSpaceReserved="false"/>
        <EditTextPreference
                android:key="TextAfterInviteMessage"
                android:title="@string/ui_setting_title_text_after_invite_message"
                app:useSimpleSummaryProvider="true"
                app:iconSpaceReserved="false"/>
        <ListPreference
                android:key="ShortenInviteMessage"
                android:title="@string/ui_setting_title_shorten_invite_message"
                android:dialogTitle="@string/ui_setting_title_shorten_invite_message"
                android:entries="@array/shorted_invite_message_labels"
                android:entryValues="@array/shorted_invite_message_values"
                app:useSimpleSummaryProvider="true"
                app:iconSpaceReserved="false"/>
        <SeekBarPreference
                android:key="WaitTimeBetweenStartMultipleApp"
                android:title="@string/ui_setting_title_wait_time_between_start_multiple_app"
                android:summary="@string/ui_setting_summary_wait_time_between_start_multiple_app"
                app:min="1000"
                android:max="10000"
                app:seekBarIncrement="250"
                app:showSeekBarValue="true"
                app:updatesContinuously="true"
                app:isPreferenceVisible="false"
                app:iconSpaceReserved="false"/>
        <CheckBoxPreference
                android:checked="true"
                android:key="ReceiveHttpsIntent"
                android:summary="@string/ui_setting_summary_receive_https_intent"
                android:title="@string/ui_setting_title_receive_https_intent"
                app:iconSpaceReserved="false"/>
    </PreferenceCategory>
    <PreferenceCategory
            android:title="@string/ui_setting_category_for_device_without_monst_app"
            app:iconSpaceReserved="false">
        <CheckBoxPreference
                android:key="ReceiveMonstAppIntent"
                android:summary="@string/ui_setting_summary_receive_monst_app_intent"
                android:title="@string/ui_setting_title_receive_monst_app_intent"
                app:iconSpaceReserved="false"/>
    </PreferenceCategory>
    <PreferenceCategory
            android:title="@string/ui_setting_category_about"
            app:iconSpaceReserved="false">
        <Preference
                android:key="Developer"
                android:summary="@string/ui_setting_summary_developer"
                android:title="@string/ui_setting_title_developer"
                app:iconSpaceReserved="false"/>
        <Preference
                android:key="Version"
                android:title="@string/ui_setting_title_version"
                app:iconSpaceReserved="false"/>
        <Preference
                android:key="OSSLicenses"
                android:title="@string/ui_setting_title_oss_licenses"
                app:iconSpaceReserved="false">
            <intent
                    android:targetPackage="com.heguro.monst_clip"
                    android:targetClass="com.heguro.monst_clip.LicensesActivity"/>
        </Preference>
    </PreferenceCategory>
</androidx.preference.PreferenceScreen>